# robotloop

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-pipeline.txt
airflow/: requirements.txt
airflow/dags/: dataset_release.py
cloud/api/: Dockerfile  main.py  requirements.txt
cloud/flink/: Dockerfile  requirements.txt  robot_stream_job.py
cloud/model_api/: Dockerfile  Dockerfile.model-init  init_model.py  model_api.py  requirements.txt
cloud/preprocessing/: Dockerfile  pre_label_service.py  requirements.txt
cloud/ray_worker/: Dockerfile  entrypoint.sh  ray_pipeline.py  requirements.txt
cloud/storage/: init-schema.sql
config/: presets.yaml
device/: Dockerfile  generator.py  make_sample_bag.py  requirements.txt  start.sh  upload_mcap.py  uploader.py
docs/: datasets.md  episode_model.md  format_convert.md  hybrid_retrieval.md  mcap_ingest.md  quality_report_sample.html  quality_tools.md  training_loop.md
infra/kafka/: create-topics.sh
infra/minio-init/: init.sh
infra/prometheus/: prometheus.yml
jupyter/: Dockerfile  demo.ipynb  hybrid_search_demo.ipynb  requirements.txt
lerobot-convert/: README.md  pyproject.toml
lerobot-convert/src/lerobot_convert/: __init__.py  cli.py  convert.py  validate.py
robotloop/: __init__.py  cli.py  pipeline.py
robotloop/convert/: __init__.py  cli.py  common.py  lerobot_v21.py  lerobot_v30.py  rlds.py
scripts/: autodl_act_pusht.sh  ingest_public_datasets.py  make_aloha_dataset.sh  verify_lerobot_dataset.py
tests/: conftest.py  test_align.py  test_convert.py  test_datasets_preflight.py  test_episode_schema.py  test_ingest_pipeline.py  test_lerobot_convert_lib.py  test_openx_blocklist.py  test_quality.py  test_retrieval_export.py
tools/: Dockerfile  cli.py  requirements.txt
(+40 files in other folders)
