[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "robotloop"
version = "0.2.0"
description = "RobotLoop 具身智能数据闭环：Episode 领域模型 / 多 topic 对齐 / RLDS↔LeRobot 互转 / 混合检索 / 训练导出 / 数据质检"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pyarrow>=15.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
clip = ["sentence-transformers>=2.7"]
video = ["imageio>=2.34", "imageio-ffmpeg>=0.5"]
mcap = ["mcap>=1.2", "mcap-ros2-support>=0.5"]
rosbag = ["rosbags>=0.10"]
openx = ["tensorflow_datasets>=4.9"]
hub = ["huggingface_hub>=0.24"]
iceberg = ["pyiceberg[pyarrow]>=0.7"]
milvus = ["pymilvus>=2.5"]
api = ["fastapi>=0.110"]
dev = ["pytest>=8.0"]

[project.scripts]
robotloop = "robotloop.cli:main"
robotloop-convert = "robotloop.convert.cli:main"

[tool.setuptools.packages.find]
include = ["robotloop*"]
