[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot-convert"
version = "1.0.0"
description = "LeRobot v2.1 <-> v3.0 batch converter with validation. Part of the RobotLoop data closed-loop."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
keywords = ["lerobot", "rlds", "embodied-ai", "robotics", "dataset"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyarrow>=14.0.0",
    "pandas>=2.0.0",
]

[project.scripts]
lerobot-convert = "lerobot_convert.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
